adding the second collection
