# middleware/validate.js
@@ -4,7 +4,32 @@ const saveTeam = (req, res, next) => {
     const validationRule = {
         captain: 'required|string',
         matches: 'required|integer',
-        nation: 'required|string'
+        nation: 'required|string',
+        confederation: 'required|string',
+        group: 'required|string',
+        coach: 'required|string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(400).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
+const saveWc = (req, res, next) => {
+    const validationRule = {
+        coach: 'required|string',
+        final_position: 'required|integer',
+        host: 'required|string',
+        iconic_moment: 'required|string',
+        top_scorer: 'required|string',
+        year: 'required|int'
     };
     validator(req.body, validationRule, {}, (err, status) => {
         if (!status) {
@@ -20,5 +45,6 @@ const saveTeam = (req, res, next) => {
 };
 
 module.exports = {
-    saveTeam
+    saveTeam,
+    saveWc
 };
