# server.js
@@ -61,7 +61,7 @@ app.get('/', (req, res) => {
 });
 
 app.get('/github/callback', passport.authenticate('github', {
-    failureRedirect: '/api-docs', session: false
+    failureRedirect: '/api-docs'
 }),
     (req, res) => {
         req.session.user = req.user;
